--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "pigpio": "^1.1.2",
     "decimal.js": "^10.0.1",
     "winston": "^3.1.0",
-    "winston-daily-rotate-file": "^3.3.3",
+    "winston-daily-rotate-file": "^3.3.3"
   }
 }
