--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
   "dependencies": {
     "express": "^4.16.3",
     "pigpio": "^1.1.2",
-    "decimal.js": "^10.0.1",
-    "winston": "^3.1.0",
-    "winston-daily-rotate-file": "^3.3.3",
+    "decimal.js": "^10.0.1"
   }
 }
