--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nvm use && sudo node index.js",
+    "start": "sudo node index.js 2>&1 | tee -i -a output.txt",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
