--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   },
   "homepage": "https://github.com/NessDan/treadmill-api#readme",
   "dependencies": {
+    "decimal.js": "^10.0.1",
     "express": "^4.16.3",
-    "pigpio": "^1.1.2",
-    "decimal.js": "^10.0.1"
+    "helmet": "^3.13.0",
+    "pigpio": "^1.1.2"
   }
 }
