--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-basic-auth": "^1.1.5",
     "helmet": "^3.13.0",
     "nodemon": "^1.18.4",
-    "pigpio": "^1.1.2"
+    "pigpio": "^1.1.2",
+    "cors": "^2.8.5"
   }
 }
