--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "express-basic-auth": "^1.1.5",
     "helmet": "^3.13.0",
     "nodemon": "^1.18.4",
-    "miband": "^0.1.3",
+    "noble": "^1.9.1",
     "pigpio": "^1.1.2",
     "cors": "^2.8.5"
   }
